[workspace]
members = [
    "exodus",
    "luascad",
    "mesh",
    "meshview",
    "tessellate3d",
]

[package]
name = "moosecad"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
exodus = { path = "exodus" }
luascad = { path = "luascad" }
mesh = { path = "mesh" }
nalgebra = "0.22.1"
tessellate3d = { path = "tessellate3d" }
